<resources>
    <string name="app_name">Target MVD</string>
    <string name="target_mvd">TARGET MVD</string>
    <string name="uc_email">EMAIL</string>
    <string name="uc_password">PASSWORD</string>
    <string name="uc_sign_in">SIGN IN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="uc_connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="uc_sign_up">SIGN UP</string>
    <string name="this_email_and_password_don_t_match">this email and password don\'t match</string>
    <string name="uc_name">NAME</string>
    <string name="you_forgot_to_put_your_name">you forgot to put your name!</string>
    <string name="oops_this_email_is_not_valid">oops! this email is not valid</string>
    <string name="min_6_characters_long">MIN. 6 CHARACTERS LONG</string>
    <string name="the_password_must_be_6_character_long">the password must be 6 character long</string>
    <string name="uc_confirm_password">CONFIRM PASSWORD</string>
    <string name="password_don_t_match">password don\'t match</string>
    <string name="uc_gender">GENDER</string>
    <string name="you_forgot_to_select_your_gender">You forgot to select your gender</string>
    <string name="generic_error">There was an unexpected error</string>
    <string name="error">ERROR</string>
    <string name="ok">OK</string>
    <string name="default_error">Oops! Network error</string>
    <string name="uc_username">USERNAME</string>
    <string name="uc_save_changes">SAVE CHANGES</string>
    <string name="log_out">Log out</string>
    <string name="email_or_password_cannot_be_empty">email or password cannot be empty</string>
    <string name="name_cannot_be_empty">name cannot be empty</string>
    <string name="email_cannot_be_empty">email cannot be empty</string>
    <string name="password_cannot_be_empty">password cannot be empty</string>
    <string name="confirm_password_cannot_be_empty">confirm password cannot be empty</string>
    <string name="gender_cannot_be_empty">gender cannot be empty</string>
    <string name="select_your_gender">SELECT YOUR GENDER</string>
    <string name="facebook_app_id">876877256214170</string>
    <string name="fb_login_protocol_scheme">fb876877256214170</string>
    <string name="create_new_target">CREATE NEW TARGET</string>
    <string name="target_points">Target Points</string>
    <string name="uc_profile">PROFILE</string>
    <string name="specify_area_length">Specify area length</string>
    <string name="area_length_hint">200 m</string>
    <string name="target_title">Target title</string>
    <string name="choose_a_title_for_your_target">Choose a title for your target</string>
    <string name="select_a_topic">Select a topic</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="save_target">Save target</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="area_length_is_not_valid">Area length is not valid</string>
    <string name="target_title_is_not_valid">Target title is not valid</string>
    <string name="failed_deleting_target">Failed deleting target</string>
    <string name="cancel">Cancel</string>
    <string name="sure_you_want_to_delete_this_target">Sure you want to delete this target?</string>
    <string name="remember_that_if_you_delete">Remember that if you delete it, you won’t be able to chat with it’s matches anymore</string>
    <string name="cool_start_chatting">Cool! Start chatting</string>
    <string name="skip">Skip</string>
    <string name="you_have_a_new_match">You have a new match!</string>
    <string name="yey">Yey!</string>
    <string name="chat">Chat</string>
</resources>
