<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.signin.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/oval_yellow_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/oval_sign_up"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/oval_light_blue_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/oval_copy_sign_up"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/target_mvd_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:letterSpacing="0.2"
            android:text="@string/target_mvd"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintBottom_toBottomOf="@+id/oval_yellow_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_text_view_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.2"
            android:text="@string/uc_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oval_yellow_sign_up" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_normal"
            android:ems="10"
            android:inputType="textPersonName"
            android:letterSpacing="0.1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view_sign_up"
            tools:ignore="LabelFor"
            tools:text="Marcos Salto" />

        <TextView
            android:id="@+id/name_message_text_view"
            style="@style/Theme.TargetMVD.Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_forgot_to_put_your_name"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

        <TextView
            android:id="@+id/email_text_view_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:letterSpacing="0.2"
            android:text="@string/uc_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_normal"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_view_sign_up"
            tools:ignore="LabelFor"
            tools:text="marcos.salto@rootstrap.com" />

        <TextView
            android:id="@+id/email_message_text_view"
            style="@style/Theme.TargetMVD.Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oops_this_email_is_not_valid"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_normal"
            android:ems="10"
            android:hint="@string/min_6_characters_long"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:letterSpacing="0.1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_view"
            tools:ignore="LabelFor"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:letterSpacing="0.2"
            android:text="@string/uc_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

        <TextView
            android:id="@+id/password_message_text_view"
            style="@style/Theme.TargetMVD.Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_password_must_be_6_character_long"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <TextView
            android:id="@+id/confirm_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:letterSpacing="0.2"
            android:text="@string/uc_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_normal"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:letterSpacing="0.1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_view"
            tools:ignore="LabelFor"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/confirm_password_message"
            style="@style/Theme.TargetMVD.Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_don_t_match"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text" />

        <TextView
            android:id="@+id/gender_text_view_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:letterSpacing="0.2"
            android:text="@string/uc_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text" />

        <Spinner
            android:id="@+id/gender_spinner"
            style="@style/spinner_style"
            android:layout_width="@dimen/width_spinner_gender"
            android:layout_height="wrap_content"
            android:entries="@array/gender"
            android:gravity="center_horizontal"
            android:prompt="@string/select_your_gender"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_text_view_sign_up" />

        <TextView
            android:id="@+id/gender_message_text_view"
            style="@style/Theme.TargetMVD.Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_forgot_to_select_your_gender"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

        <Button
            android:id="@+id/sign_up_button_sign_up"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:width="@dimen/width_signup_button"
            android:letterSpacing="0.2"
            android:text="@string/uc_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

        <Button
            android:id="@+id/sign_in_button_sign_up"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/width_signin_button"
            android:letterSpacing="0.2"
            android:text="@string/uc_sign_in"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>